--- a/obedient/powny/uwsgi.ini
+++ b/obedient/powny/uwsgi.ini
@@ -1,11 +1,11 @@
 [uwsgi]
-logto = /var/log/gns/uwsgi.log
+logto = ${ this.volumes['logs'].path }/uwsgi.log
 log-date = %%Y%%m%%d-%%H%%M%%S
 
-http = :${this.getport("http")}
+http = :${ this.getport('http') }
 
 module = gns.api:make_wsgi_app()
-pyargv = --config /etc/gns/gns.yaml
+pyargv = --config ${ this.volumes['config'].getfilepath('powny.yaml') }
 enable-threads = yes
 
 master = yes
