uwsgi.ini: fixed Volume dest/path mess

--- a/obedient/powny/uwsgi.ini
+++ b/obedient/powny/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-logto = ${ this.volumes['logs'].path }/uwsgi.log
+logto = ${ this.volumes['logs'].dest }/uwsgi.log
 log-date = %%Y%%m%%d-%%H%%M%%S
 
 http = :${ this.getport('http') }
