--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pylint
+envlist = flake8, pylint, dominator
 
 [testenv]
 usedevelop = true
@@ -13,5 +13,10 @@ whitelist_externals = sh
 commands = sh -c 'pylint -f colorized -rn obedient setup.py || true'
 deps = pylint
 
+[testenv:dominator]
+commands = dominator -ldebug shipment generate obedient.powny local
+deps = dominator
+sitepackages = True
+
 [flake8]
-max-line-length = 120 
+max-line-length = 120
