--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,10 @@ commands = sh -c 'pylint -f colorized -rn obedient setup.py || true'
 deps = pylint
 
 [testenv:dominator]
-commands = dominator -ldebug shipment generate obedient.powny local
+whitelist_externals = dominator
+commands = dominator -c fixtures/settings.yaml -ldebug edit discover local
+           dominator -c fixtures/settings.yaml -ldebug --vcr=fixtures/generate.yaml edit generate obedient.powny test
+           dominator -c fixtures/settings.yaml -ldebug --vcr=fixtures/deploy.yaml container stop start status -d stop
 deps = dominator
 sitepackages = True
 
