tox: added workaround for pip bug

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ commands = dominator -c fixtures/settings.yaml -ldebug edit discover local
            dominator -c fixtures/settings.yaml -ldebug --vcr=fixtures/deploy.yaml container stop start status -d stop
 deps = dominator
 sitepackages = True
+# Because of bug in pip https://github.com/pypa/pip/issues/3
+usedevelop = False
 
 [flake8]
 max-line-length = 120
