--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,16 @@ commands = sh -c 'pylint -f colorized -rn obedient setup.py || true'
 deps = pylint
 
 [testenv:dominator]
-whitelist_externals = dominator
-commands = dominator -c fixtures/settings.yaml -ldebug edit discover local
-           dominator -c fixtures/settings.yaml -ldebug --vcr=fixtures/generate.yaml edit generate obedient.powny test
-           dominator -c fixtures/settings.yaml -ldebug --vcr=fixtures/deploy.yaml container stop start status -d stop
+whitelist_externals =
+    dominator
+    diff
+    sh
+commands =
+    dominator -c fixtures/settings.yaml -ldebug -s test.pickle edit local-ship
+    dominator -c fixtures/settings.yaml -ldebug -s test.pickle --vcr=fixtures/generate.yaml edit generate obedient.powny test
+    dominator -c fixtures/settings.yaml -ldebug -s test.pickle --vcr=fixtures/deploy.yaml container stop start status -d stop
+    sh -c 'dominator -c fixtures/settings.yaml -ldebug -s test.pickle export > test.yaml'
+    diff -u fixtures/test.yaml test.yaml
 deps = dominator
 sitepackages = True
 # Because of bug in pip https://github.com/pypa/pip/issues/3
