--- a/obedient/powny/logging.elog.yaml
+++ b/obedient/powny/logging.elog.yaml
@@ -1,7 +1,4 @@
-level: DEBUG
+level: INFO
 class: elog.handlers.ElasticHandler
-time_field: "@timestamp"
-time_format: "%Y-%m-%dT%H:%M:%S.%f"
 index: "log-{@timestamp:%Y}-{@timestamp:%m}-{@timestamp:%d}"
 doctype: powny
-fields: null
