--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pylint, dominator
+envlist = flake8, dominator
 
 [testenv]
 usedevelop = true
@@ -9,8 +9,7 @@ commands = flake8 obedient setup.py
 deps = flake8
 
 [testenv:pylint]
-whitelist_externals = sh
-commands = sh -c 'pylint -f colorized -rn obedient setup.py || true'
+commands = python -m pylint -f colorized -rn obedient/powny setup.py
 deps = pylint
 
 [testenv:dominator]
